--- a/Tp/src/main/Front/html/adoptar.html
+++ b/Tp/src/main/Front/html/adoptar.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="../css/estilosAdoptar.css">
     <title>Categoria perros</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&display=swap"
+      rel="stylesheet"
+    >
     <!-- .ICO -->
     <link rel="icon" href="../fotos/huella.ico">
     <!-- PAG ICONOS -->
@@ -15,14 +19,14 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="../jscript/menu.js"></script>
-
 </head>
+
 <body>
     <header>
         <div class="logo">
             <img src="../fotos/logoBlanco.png" alt="logo" width="5%">
             <h2>Patitas</h2>
-          </div>
+        </div>
 
         <div class="usuario">
           <div class="usuario-icon">
@@ -54,19 +58,27 @@
                     <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
                 </section>
                 <section>
-                    <a href="registraTMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+                    <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
                 </section>
                 <section>
                     <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
                 </section>
+                <section>
+                    <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
+                </section>
+
             </section>
         </div>
     </nav>
 
-
-
-
     <main>
+        <section class="portada">
+            <section>
+                <div>
+                    <h2>Adopta!</h2>
+                </div>
+            </section>
+        </section>
 
         <div class="centered">
 
