Ahora podemos usar las sesiones

--- a/Tp/src/main/Front/html/administrador.html
+++ b/Tp/src/main/Front/html/administrador.html
@@ -65,26 +65,28 @@
           </button>
           <p>MENU</p>
           <section class="conj-botones-menu">
-              <section>
-                  <a href="adoptar.html" type="button" class="boton-menu">ADOPTAR</a>
-              </section>
-              <section>
-                  <a href="darEnAdopcion.html" type="button" class="boton-menu">DAR EN ADOPCION</a>
-              </section>
-              <section>
-                  <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
-              </section>
-              <section>
-                  <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
-              </section>
-              <section>
-                  <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
-              </section>
-              <section>
-                  <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
-              </section>
-
-          </section>
+            <section>
+              <a href="index.html" type="button" class="boton-menu">INICIO</a>
+            </section>
+            <section>
+                <a href="adoptar.html" type="button" class="boton-menu">ADOPTAR</a>
+            </section>
+            <section>
+                <a href="darEnAdopcion.html" type="button" class="boton-menu">DAR EN ADOPCION</a>
+            </section>
+            <section>
+                <a href="encontreUnaMascota.html" type="button" class="boton-menu">ENCONTRE A UNA MASCOTA</a>
+            </section>
+            <section>
+                <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+            </section>
+            <section>
+                <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
+            </section>
+            <section>
+              <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
+            </section>
+        </section>
       </div>
   </nav>
 
