--- a/Tp/src/main/Front/html/hogaresDeTransito.html
+++ b/Tp/src/main/Front/html/hogaresDeTransito.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/estilosAdoptar.css">
-    <title>Categoria perros</title>
+    <link rel="stylesheet" href="../css/estilosHogaresTransito.css">
+    <title>HOGARES DE TRANSITO </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&display=swap"
       rel="stylesheet"
@@ -33,8 +33,7 @@
           <div class="usuario-icon">
               <i class="fas fa-user-circle"></i>
           </div>
-          <div id= appVue> 
-          <a id="volver" href="iniciarSesion.html" target = "_self"></a>
+          <div id= appVue>          
           <p>{{nombre}}</p>          
 
         </div>
@@ -71,17 +70,9 @@
                 <section>
                     <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
                 </section>
-
-                <section>
-                    <a href="hogaresDeTransito.html" type="button" class="boton-menu"> HOGARES DE TRANSITO</a>
-                  </section>
-
                 <section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
                 </section>
-
-               
-
             </section>
         </div>
     </nav>
@@ -90,7 +81,7 @@
         <section class="portada">
             <section>
                 <div>
-                    <h2>Adopta!</h2>
+                    <h2>BUSCA HOGARES DE TRANSITO!</h2>
                 </div>
             </section>
         </section>
@@ -456,6 +447,6 @@
         </section>
       </footer>
       <script type="text/javascript" src="../jscript/menu.js"></script>
-      <script type="text/javascript" src="../jscript/user.js"></script>
+      <script type="text/javascript" src="../jscript/adoptar.js"></script>
 </body>
 </html>
