--- a/Front/html/iniciarSesion.html
+++ b/Front/html/iniciarSesion.html
@@ -35,6 +35,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+
       
 
   </head>
@@ -92,6 +93,8 @@
             </section> 
 
         </section>
+
+
     </main>
 
     <footer>
@@ -136,5 +139,6 @@
       </footer>
 <script type="text/javascript" src="../jscript/menu.js"></script>
 <script type="text/javascript" src="../jscript/iniciarSesion.js"></script>
+<script type="text/javascript" src="../jscript/vue.js"></script>
 </body>
 </html>
