Sincroniza3 el registro

--- a/Front/html/hogaresDeTransito.html
+++ b/Front/html/hogaresDeTransito.html
@@ -73,6 +73,9 @@
                 <section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
                 </section>
+                <section>
+                    <a href="hogaresDeTransito.html" type="button" class="boton-menu">HOGAR DE TRANSITO</a>
+                  </section>
             </section>
         </div>
     </nav>
@@ -93,7 +96,7 @@
                 <article class="card">
 
                     <a href="adoptarPerfil.html"> <!-- tarjeta 1 -->
-                        <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro1.jpg);">
+                        <span class="card-header"">
                             <span class="card-title">
                                 <h3>Nombre</h3>
                             </span>
