--- a/Front/html/index.html
+++ b/Front/html/index.html
@@ -69,8 +69,17 @@
                 </section>
 
                 <section>
+                    <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
+                </section>
+
+
+                <section>
                     <a href="iniciarSesion.html" type="button" class="boton-menu">CERRAR SESION</a>
                 </section>
+
+               
+
+
                 <section>
                   <a href="administrador.html" type="button" class="boton-menu">CONFIGURAR PARAMETROS</a>
                 </section>
