--- a/Front/html/registrarPersona.html
+++ b/Front/html/registrarPersona.html
@@ -92,10 +92,9 @@
               </label>
               <br />
               <br />
-              <label>
+              <label>Ingrese fecha de nacimiento
                 <input
-                  placeholder="Ingrese fecha de nacimiento"
-                  type="text"
+                  type="date"
                   name="fechaDeNacimiento"
                   v-model="fechaDeNacimiento"
                   value=""
@@ -356,7 +355,7 @@
             </fieldset>
             <!-- <button class="boton-registrarse" type="submit">Registrarse</button> -->
             <button class="boton-registrarse" v-on:click="registrarse">Registrarse</button>
-            <a id="anchorID" href="adoptar.html" target = "_self"></a>
+            <a id="anchorID" href="index.html" target = "_self"></a>
           </section>
         
         </form>
