--- a/Front/html/iniciarSesion.html
+++ b/Front/html/iniciarSesion.html
@@ -75,7 +75,7 @@
                             <br> <br>
                             <section>
                               <button class="boton-iniciarSesion" v-on:click="login">Iniciar Sesion</button>
-                              <a id="anchorID" href="adoptar.html" target = "_self"></a>
+                              <a id="anchorID" href="index.html" target = "_self"></a>
                             </section>
                             <section>
                                 <br>
