Ya podemos registrar persona

--- a/Front/html/adoptar.html
+++ b/Front/html/adoptar.html
@@ -68,6 +68,10 @@
                 <section>
                     <a href="registrarMascota.html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
                 </section>
+
+                <section>
+                    <a href="aprobarPublicaciones.html".html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+                </section>
                 
 
                 <section>
