--- a/Front/html/aprobarPublicaciones.html
+++ b/Front/html/aprobarPublicaciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilosPublicacionesVoluntario.css">
     <title>Aprobar publicaiones</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&display=swap"
