Ya podemos agregar contacto

--- a/Front/html/adoptar.html
+++ b/Front/html/adoptar.html
@@ -70,7 +70,7 @@
                 </section>
 
                 <section>
-                    <a href="aprobarPublicaciones.html".html" type="button" class="boton-menu">REGITSTRAR MASCOTA</a>
+                    <a href="aprobarPublicaciones.html" type="button" class="boton-menu">APROBAR PUBLICACIONES</a>
                 </section>
                 
 
