--- a/Front/html/hogaresDeTransito.html
+++ b/Front/html/hogaresDeTransito.html
@@ -96,31 +96,92 @@
                 <article class="card">
 
                     <a href="adoptarPerfil.html"> <!-- tarjeta 1 -->
-                        <span class="card-header"">
+                        <span class="card-header">
                             <span class="card-title">
                                 <h3>Nombre</h3>
                             </span>
                         </span>
 
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <div class="texto">
-                                        <div class="icon">
-                                            <i class="fas fa-paw"></i>
-                                        </div>
-                                        <p>Hembra</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="texto">
-                                        <div class="icon">
-                                            <i class="fas fa-paw"></i>
-                                        </div>
-                                        <p>1 año</p>
-                                    </div>
-                                </li>
-                            </ul>
+                            
+                            <div class="texto">
+                                <table>
+                                    <tr>
+                                        <th>
+                                            <div class="texto">
+                                                <div class="icon">
+                                                    <i class="fas fa-paw"></i>
+                                                </div>
+                                                <p>Acepta:</p>
+                                            </div>
+                                        </th>
+                                        <td>
+                                            <div class="texto">
+                                                <p>Gatos, perros</p>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            <div class="texto">
+                                                <div class="icon">
+                                                    <i class="fas fa-paw"></i>
+                                                </div>
+                                                <p>Posee patio:</p>
+                                            </div>
+                                        </th>
+                                        <td>
+                                            <div class="texto">
+                                                <p>Si</p>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            <div class="texto">
+                                                <div class="icon">
+                                                    <i class="fas fa-paw"></i>
+                                                </div>
+                                                <p>Capacidad:</p>
+                                            </div>
+                                        </th>
+                                        <td>
+                                            <div class="texto">
+                                                <p>6</p>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>
+                                            <div class="texto">
+                                                <div class="icon">
+                                                    <i class="fas fa-paw"></i>
+                                                </div>
+                                                <p>Ocupados:</p>
+                                            </div>
+                                        </th>
+                                        <td>
+                                            <div class="texto">
+                                                <p>2</p>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th colspan="2">
+                                            <div class="texto">
+                                                <p>Otras caracteristicas:</p>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2">
+                                            <div class="textoCaracteristica">
+                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non esse magnam labore ab ex aperiam voluptate dicta cupiditate et quasi.</p>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <br>
                         </div>
                     </a>
 
