--- a/Front/html/registrarPersona.html
+++ b/Front/html/registrarPersona.html
@@ -355,7 +355,8 @@
             </fieldset>
             <!-- <button class="boton-registrarse" type="submit">Registrarse</button> -->
             <button class="boton-registrarse" v-on:click="registrarse">Registrarse</button>
-            <a id="anchorID" href="iniciarSesion.html" target = "_self"></a>
+            <a id="agregarContacto" href="agregarContacto.html" target = "_self"></a>
+            <a id="index" href="iniciarSesion.html" target = "_self"></a>
           </section>
         
         </form>
