--- a/Front/html/aprobarPublicaciones.html
+++ b/Front/html/aprobarPublicaciones.html
@@ -102,7 +102,7 @@
 
                 <article class="card">
 
-                    <a href="adoptarPerfil.html"> <!-- tarjeta 1 -->
+                    <a href="perfilPubliRevision.html"> <!-- tarjeta 1 -->
                         <span class="card-header" style="background-image: url(../fotos/categoriaPerros/perro1.jpg);">
                             <span class="card-title">
                                 <h3>Nombre</h3>
@@ -128,6 +128,7 @@
                                     </div>
                                 </li>
                             </ul>
+                            
                         </div>
                     </a>
 
